Move src.conf to /etc/src.conf for building  Changes to be committed: 	modified:   build-conf/src.conf

--- a/FreeBSD9/build-conf/src.conf
+++ b/FreeBSD9/build-conf/src.conf
@@ -2,9 +2,9 @@ NO_WERROR=
 WERROR=
 #
 # SVA home: Note that this variable is used in the kernel configuration for SVA
-# and must be set. 
+# and must be set.
 #
-SVA_HOME=/home/dautenh1/active/sva/sva.git
+SVA_HOME=/root/PerspicuOS
 
 #
 # Build SVA kernel by default
@@ -32,12 +32,14 @@ KERNCONF=SVA
 #
 # Nothing means to use the mentioned llvm, without any instrumentation
 #
+LLVMBIN=llvm/build/bin
+
 SVA_INST_FLAGS=-mllvm -x86-add-cfi
-CC=${SVA_HOME}/llvm-obj/Release+Asserts/bin/clang -I${SVA_HOME}/SVA/include ${SVA_INST_FLAGS}
-CXX=${SVA_HOME}/llvm-obj/Release+Asserts/bin/clang++ -I${SVA_HOME}/SVA/include ${SVA_INST_FLAGS}
-CPP=${SVA_HOME}/llvm-obj/Release+Asserts/bin/clang-cpp -I${SVA_HOME}/SVA/include ${SVA_INST_FLAGS}
+CC=${SVA_HOME}/${LLVMBIN}/clang -I${SVA_HOME}/nk/include ${SVA_INST_FLAGS}
+CXX=${SVA_HOME}/${LLVMBIN}/clang++ -I${SVA_HOME}/nk/include ${SVA_INST_FLAGS}
+CPP=${SVA_HOME}/${LLVMBIN}/clang++ -I${SVA_HOME}/nk/include ${SVA_INST_FLAGS}
 
 #
 # Include SVA header files
 #
-CFLAGS+=-I${SVA_HOME}/SVA/include
+CFLAGS+=-I${SVA_HOME}/nk/include
